--- a/demo/src/main/resources/com/example/advisorStudents.fxml
+++ b/demo/src/main/resources/com/example/advisorStudents.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 
@@ -31,11 +32,23 @@
                   <Insets left="20.0" right="20.0" />
                </padding>
             </VBox>
+            <HBox alignment="CENTER" prefHeight="0.0" prefWidth="334.0">
+               <children>
+                  <Button fx:id="Back" mnemonicParsing="false" text="Back" onAction="#Back">
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                  </Button>
+               </children>
+               <VBox.margin>
+                  <Insets bottom="10.0" />
+               </VBox.margin>
+            </HBox>
          </children>
       </VBox>
    </center>
    <bottom>
-      <Button fx:id="Logout" mnemonicParsing="false" prefHeight="37.0" prefWidth="103.0" text="Logout" BorderPane.alignment="CENTER" />
+      <Button fx:id="Logout" mnemonicParsing="false" prefHeight="11.0" prefWidth="103.0" text="Logout" BorderPane.alignment="CENTER" onAction="#Logout" />
    </bottom>
    <stylesheets>
      <URL value="@style.css" />
