--- a/demo/src/main/resources/com/example/StudentCompletedClasses.fxml
+++ b/demo/src/main/resources/com/example/StudentCompletedClasses.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="588.0" prefWidth="334.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.StudentCurrentClassesController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="588.0" prefWidth="334.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.StudentCompletedClassesController">
    <center>
       <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
@@ -27,14 +27,14 @@
             <VBox prefHeight="389.0" prefWidth="334.0">
                <children>
                   <AnchorPane prefHeight="15.0" prefWidth="334.0" />
-                  <Label fx:id="currentClassesLabel" text="Current Classes" />
+                  <Label fx:id="completedClassesLabel" text="Completed Classes" />
                   
                </children>
                <padding>
                   <Insets left="20.0" right="20.0" />
                </padding>
             </VBox>
-            <Button fx:id="Back" mnemonicParsing="false" onAction="#Back" text="Back" onAction="#Back"/>
+            <Button fx:id="Back" mnemonicParsing="false" onAction="#Back" text="Back" />
          </children>
       </VBox>
    </center>
