--- a/demo/src/main/resources/com/example/StudentCurrentClasses.fxml
+++ b/demo/src/main/resources/com/example/StudentCurrentClasses.fxml
@@ -34,7 +34,7 @@
                   <Insets left="20.0" right="20.0" />
                </padding>
             </VBox>
-            <Button fx:id="Back" mnemonicParsing="false" onAction="#Back" text="Back" onAction="#Back"/>
+            <Button fx:id="Back" mnemonicParsing="false" onAction="#Back" text="Back" />
          </children>
       </VBox>
    </center>
